settings_ui: Fix flickering when hovering over "x" in date-type field.
fixes: #33346

--- a/web/styles/settings.css
+++ b/web/styles/settings.css
@@ -1630,6 +1630,7 @@ label.preferences-radio-choice-label {
             display: none;
             cursor: pointer;
             grid-area: close-button;
+            z-index: 5;
 
             &:hover {
                 opacity: 1;
